--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,5 @@ repositories {
 }
 
 dependencies {
-    //compile 'fastily:jwiki:1.3.1'
-    compile 'fastily:ctools:0.0.1'
+    compile 'fastily:wpkit:0.0.1'
 }
