Added new BMgr deploy script
Also included:
* Updated rpi3 crontab to work with new script format

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ task wrapper(type: Wrapper) {
 
 task bmgr(type: Jar) {
   baseName = "BMgr"
-  version = "1.0.0"
+  //version = "1.0.0"
 
   from {
     configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
