--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,52 @@
-apply plugin: 'java'
-apply plugin: 'idea'
 apply plugin: 'eclipse'
 
-repositories {
-    mavenLocal()
-    jcenter()
+subprojects {
+    apply plugin: 'java'
+
+    repositories {
+      mavenLocal()
+      jcenter()
+    }
+
+    dependencies {
+      compile "info.picocli:picocli:2.0.3"
+      compile "fastily:jwiki:1.4.1"
+    }
 }
 
-dependencies {
-	compile "info.picocli:picocli:2.0.3"
-    compile "fastily:jwiki:1.4.1"
+project(':fastilybot-enwp') {
+    apply plugin: 'application'
+
+    mainClassName = "enwp.BMgr"
+
+    dependencies {
+        compile project(':fastilybot-shared')
+    }
+
+
+    task doDist(type: Jar) {
+      baseName = "BMgr"
+
+      from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+      }
+
+      manifest {
+        attributes 'Main-Class': 'enwp.BMgr'
+      }
+      
+      exclude "META-INF/*.SF", "**/LICENSE*", "**/NOTICE*", "**/maven/**"
+
+      with jar
+    }
+}
+
+project(':fastilybot-tools') {
+    dependencies {
+        compile project(':fastilybot-shared')
+    }
 }
 
 task wrapper(type: Wrapper) {
     gradleVersion = '4.3.1'
-}
-
-
-task bmgr(type: Jar) {
-  baseName = "BMgr"
-  //version = "1.0.0"
-
-  from {
-    configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-  }
-
-  manifest {
-    attributes 'Main-Class': 'enwp.BMgr'
-  }
-  
-  exclude "META-INF/*.SF", "**/LICENSE*", "**/NOTICE*", "**/maven/**", "**/tools/**"
-
-  with jar
 }
