--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'fastilybot'
 
-include 'fastilybot-shared', 'fastilybot-enwp', 'fastilybot-tools'
+include 'fastilybot-shared', 'fastilybot-enwp'
