minor edit - bump gradle version

--- a/build.gradle
+++ b/build.gradle
@@ -103,6 +103,6 @@ project(':fastilybot-enwp') {
   }
 }
 
-task wrapper(type: Wrapper) {
-  gradleVersion = '4.7'
+wrapper {
+    gradleVersion = '4.8'
 }
