fix collision when running gradle doDist

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 }
 
 task doDist(type: Jar) {
-  baseName = "FastilyBot"
+  baseName = "FB"
 
   from {
     configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
