--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ language: java
 before_install:
   - git clone --depth 1 https://github.com/fastily/jwiki.git
   - pushd jwiki
-  - ./gradlew -x test build publishToMavenLocal
+  - ./gradlew -x test publishToMavenLocal
   - popd
   - git clone --depth 1 https://github.com/fastily/wp-toolbox.git
   - pushd wp-toolbox
-  - ./gradlew -x test build publishToMavenLocal
+  - ./gradlew -x test publishToMavenLocal
   - popd
 
 notifications:
